变更为配置文件形式，省得我每次调整都要重新编译